k8s/apps/keycloak-mysql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-mysql
  labels:
    app: keycloak-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-mysql
  template:
    metadata:
      labels:
        app: keycloak-mysql
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:22.0.1-2
        args: ["--verbose", "start", "--hostname-strict=false", "--hostname-strict-https=false"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "512Mi"
