k8s/apps/keycloak-mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-mysql
  labels:
    app: keycloak-mysql
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak-mysql
  type: ClusterIP
