k8s/apps/keycloak-mysql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-mysql-ingress

spec:
  ingressClassName: "nginx"
  rules:
  - host: "auth.walnuts.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-mysql
            port:
              number: 8080
